Fix form fields not aligning nicely
This was because of basscss for some weird reason

--- a/less/TemporaryAddressChange.less
+++ b/less/TemporaryAddressChange.less
@@ -38,3 +38,8 @@
 	padding: 3px;
     }
 }
+
+.temporary-address-change--header {
+	display: grid;
+	grid-template-columns: [header] auto [close-icon] 10%;
+}
